--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,9 @@
     <input type="text" name="name">
 
     <br><br>
-    <label for="stuff">Whats in your mind: </label>
-    <input type="number" name="stuff">
-    
+    <label for="stuff">age: </label>
+    <input type="number" name="age">
+
     <input type="submit" value="submit">
 </form>
 
